k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: python-flask-hello
  name: python-flask-hello
  namespace: python-flask-hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-flask-hello
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: python-flask-hello
    spec:
      securityContext:
        # User `nobody` exists in Devuan container, group is `nogroup`
        runAsUser:  65534  # nobody
        runAsGroup: 65534  # nogroup
      containers:
      - name: python-flask-hello
        image: python-flask-hello:latest
        imagePullPolicy: Never  # workaround for Minikube, to not try to pull local images
        # `command` and `args` are the same as in the Dockerfile. Here they are just as example.
        command:
          - "flask"
        args: [ "run", "-p", "8080", "-h", "::" ]
        ports:
          - name: flask
            containerPort: 8080
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 200m
        readinessProbe:
          httpGet:
            port: flask
            path: /
        livenessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - "pidof -x python3"  # Argument `-x` is not supported with busybox version in Alpine linux.
